fix title letter spacing (add padding-left)

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ p, h1, h3 {
 
 .welcome h1 {
     letter-spacing: 10px;
+    padding-left: 10px;
 }
 
 .timer-grid-title h3 {
